[package]
name = "egui-ash-renderer"
description = "A Vulkan renderer for egui using Ash."
readme = "README.md"
keywords = ["egui", "vulkan", "ash"]
homepage = "https://github.com/adrien-ben/egui-ash-renderer"
repository = "https://github.com/adrien-ben/egui-ash-renderer"
documentation = "https://docs.rs/egui-ash-renderer"
license = "MIT"
version = "0.1.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2021"

exclude = [
    "assets/*",
    "scripts/*",
]

[dependencies]
thiserror = "1.0"
log = "0.4"
egui = { version = "0.26", default-features = false }
ash = { version = ">=0.34, <=0.37", default-features = false, features = ["debug"] }
ultraviolet = "0.9"

gpu-allocator = { version = "0.25", default-features = false, features = ["vulkan"], optional = true }
vk-mem = { version = "0.3", optional = true }

[features]
default = []
dynamic-rendering = []
gpu-allocator = ["dep:gpu-allocator"]
vk-mem = ["dep:vk-mem"]

[dev-dependencies]
simple_logger = "4.0"
winit = { version = "0.29", default-features = false, features = ["rwh_05"]}
ash = { version = "0.37", default-features = false, features = ["debug", "linked"] }
ash-window = "0.12"
raw-window-handle = "0.5"
image = "0.24"
egui = "0.26"
egui-winit = "0.26"
egui_demo_lib = "0.26"
egui_extras = { version = "0.26", default-features = false, features = ["all_loaders"] }
egui-ash-renderer = { path = ".", features = []}
