[package]
name = "egui-ash-renderer"
description = "A Vulkan renderer for egui using Ash."
readme = "README.md"
keywords = ["egui", "vulkan", "ash"]
homepage = "https://github.com/adrien-ben/egui-ash-renderer"
repository = "https://github.com/adrien-ben/egui-ash-renderer"
documentation = "https://docs.rs/egui-ash-renderer"
license = "MIT"
version = "0.7.0"
authors = ["Adrien Bennadji <adrien.bennadji@live.fr>"]
edition = "2021"
include = ["/src", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
thiserror = "2.0"
log = "0.4"
egui = { version = ">=0.26, <=0.31", default-features = false }
ash = { version = "0.38", default-features = false, features = ["std"] }

gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"], optional = true }
vk-mem = { version = "0.4", optional = true }

[features]
default = []
dynamic-rendering = []
gpu-allocator = ["dep:gpu-allocator"]
vk-mem = ["dep:vk-mem"]

[dev-dependencies]
simple_logger = "5.0"
winit = "0.30"
ash = { version = "0.38", default-features = false, features = ["debug", "linked", "std"] }
ash-window = "0.13"
raw-window-handle = "0.6"
image = "0.25"
egui = "0.31"
egui-winit = "0.31"
egui_demo_lib = "0.31"
egui_extras = { version = "0.31", default-features = false, features = ["all_loaders"] }
egui-ash-renderer = { path = ".", features = []}
